# blueboat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
config/: gmapping.yaml
launch/: all.launch  amcl.launch  blueboat_urdf_view.launch  gmapping.launch  keydrive.launch  localization.launch  move_base.launch  one_ekf_localization.launch  rviz.launch  test.launch
maps/: pp.yaml  pp1.yaml  pp3.yaml
meshes/: viz_urdf.launch
param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  navsat_params.yaml  teb_local_planner_params.yaml
rviz/: launch.rviz  urdf.rviz
src/blueboat_bringup/: CMakeLists.txt  package.xml
src/blueboat_control/: CMakeLists.txt  package.xml
src/blueboat_control/include/blueboat_control/: controller.h
src/blueboat_control/launch/: controller.launch  keydrive.launch
src/blueboat_control/scripts/: cmd_vel_to_speed_heading.py  twist2thrust.py  waypoint_follower.py
src/blueboat_control/src/: controller.cpp  goal_to_path_node.cpp
src/blueboat_control/src/autonmy/: control.py  control_simple.py  control_simple2.py  control_simple_avoidance.py  odom.py
src/blueboat_control/src/autonmy/motor/: cmd2pwm.py  cmd2pwmMO.py
src/blueboat_control/src/autonmy/test/: motor_speed_test.py  rc_override.py  stop.py  test_cmdvel_patterns.py
src/blueboat_description/: CMakeLists.txt  package.xml
src/blueboat_description/meshes/base/blueboat/mesh/: blueboat.dae
src/blueboat_description/meshes/sensors/camera/: d435i_camera.stl
src/blueboat_description/urdf/: blueboat_base.urdf.xacro  propeller.xacro
src/blueboat_gazebo/: CMakeLists.txt  package.xml
src/blueboat_gazebo/env-hooks/: 99_blueboat_gazebo.sh
src/blueboat_gazebo/launch/: blueboat_urdf_view.launch  real2sim_dnn.launch  sydneyregatta.launch  test.launch  usv_keydrive.launch
src/blueboat_gazebo/models/dock/: model.config  model.sdf
src/blueboat_gazebo/models/rc_boat/: model.sdf
src/blueboat_gazebo/models/robotx_light_buoy_1/: model.config  model.sdf
src/blueboat_gazebo/models/robotx_light_buoy_2/: model.config  model.sdf
src/blueboat_gazebo/models/robotx_light_buoy_3/: model.config  model.sdf
src/blueboat_gazebo/models/sydney_regatta/: model.sdf
src/blueboat_gazebo/models/vessel_a/: model.sdf
src/blueboat_gazebo/models/vessel_d/: model.sdf
src/blueboat_gazebo/models/vessel_e/: model.sdf
src/blueboat_gazebo/models/vessel_e/meshes/: Boat05.dae
src/blueboat_gazebo/models/vessel_f/: model.sdf
src/blueboat_gazebo/models/vessel_g/: model.sdf
src/blueboat_gazebo/scripts/: pinger_visualization.py  spawn_blueboat.bash
src/blueboat_gazebo/src/: GazeboRosVelodyneLaser.cpp  real2sim_dnn_node.cpp
src/blueboat_gazebo/urdf/: blueboat_gazebo.urdf.xacro
src/blueboat_gazebo/urdf/dynamics/: blueboat_gazebo_dynamics_plugin.xacro
src/blueboat_gazebo/urdf/sensors/: ball_shooter.xacro  blueboat_3d_lidar.xacro  blueboat_camera.xacro  blueboat_gps.xacro  blueboat_imu.xacro  blueboat_p3d.xacro  blueboat_pinger.xacro  blueboat_planar_sonar.xacro  lidar.xacro
src/blueboat_gazebo/urdf/thrusters/: blueboat_gazebo_thruster_config.xacro  blueboat_gazebo_thruster_plugin.xacro  propeller.xacro
src/blueboat_gazebo/worlds/: example_course.world  example_course.world.xacro  open_ocean.generated.world  open_ocean.world  open_ocean.world.xacro  simple_obstacles.xacro  sydneyregatta.world.xacro  usv.world.xacro  usv_fast.world.xacro
src/blueboat_gazebo/worlds/xacros/: usv_wind_plugin.xacro
src/blueboat_navigation/: CMakeLists.txt  package.xml
src/blueboat_navigation/config/: coverage.rviz
src/blueboat_navigation/include/coverage/: a_star.h  coverage.h  partition.h
src/blueboat_navigation/include/coverage_binn/: simple_dubins_path.h
src/blueboat_navigation/include/simple_dubins_path/: simple_dubins_path.h
src/blueboat_navigation/launch/: amcl.launch  gmapping.launch  gps_imu_global.launch  localization.launch  move_base.launch  one_ekf_localization.launch  pcl2_laserscan_map.launch  sim_guidance.launch
src/blueboat_navigation/maps/: E.yaml  dock.yaml  pp2.yaml  pp4.yaml  pp5.yaml
src/blueboat_navigation/param/: costmap_common_params.yaml  costmap_common_params_alg.yaml  ekf_params.yaml  global_costmap_params.yaml  global_costmap_params_alg.yaml  local_costmap_params.yaml  local_costmap_params_alg.yaml  move_base_params.yaml  teb_local_planner_params.yaml  teb_local_planner_params_alg.yaml
src/blueboat_navigation/src/: DubinsReedsSheppPlanner.cpp  astar_planner.cpp  path_stitch.cpp  rrtstar_planner.cpp  vfh_node.cpp
src/blueboat_navigation/src/coverage_binn/: coverage_binn.cpp
src/blueboat_navigation/src/coverage_boustrophedon/: coverage.cpp  coverage_node.cpp  partition.cpp  simple_dubins_path.cpp  simple_dubins_path_node.cpp
src/blueboat_navigation/src/steering/: cc_dubins_planner.cpp  dubins_planner.cpp  hc_rs_planner.cpp  hcpmpm_rs_planner.cpp  reeds_shepp_planner.cpp
src/buoy_course/: CMakeLists.txt  package.xml
src/buoy_course/config/: course_config.yaml
src/buoy_course/include/buoy_course/: buoy_tracker.h  course_planner.h  metrics_node.h
src/buoy_course/launch/: buoy_course.launch
src/buoy_course/src/: buoy_tracker.cpp  course_planner.cpp  metrics_node.cpp
src/dock_perception/: CMakeLists.txt  package.xml
src/dock_perception/config/: params_lshape.yaml
src/dock_perception/include/dock_perception/: lshape_estimator.hpp
src/dock_perception/launch/: dock_planner_alts.txt  gotodock.launch  inside loop: course_planner  run.launch
src/dock_perception/src/: dock_approach_planner.cpp  dock_pose_estimator.cpp  docking_metric_node.cpp  lshape_estimator.cpp
src/guidance/: CMakeLists.txt
src/map_inflating/: CMakeLists.txt  package.xml
src/map_inflating/config/: map_params.yaml
src/map_inflating/launch/: map_inflating.launch
src/usv_msgs/: CMakeLists.txt
urdf/: blueboat_base.urdf.xacro  blueboat_gazebo.urdf.xacro  blueboat_gazebo.xacro  macros.xacro
urdf/components/: blueboat_3d_lidar.xacro  blueboat_camera.xacro  blueboat_gps.xacro  (+5 more)
worlds/: E.yaml  generate_and_launch.sh  open_ocean.xacro
(+43 files in other folders)
