<?xml version="1.0"?>
<package format="2">
  <name>blueboat_control</name>
  <version>0.0.0</version>
  <description>The blueboat_control package</description>

  <maintainer email="jhlenes@outlook.com">Jan Henrik Lenes</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>usv_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
</package>
