<?xml version="1.0"?>
<package format="2">
  <name>blueboat_description</name>
  <version>0.0.0</version>
  <description>The blueboat_description package</description>

  <maintainer email="ppninja@todo.todo">ppninja</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>xacro</depend>
</package>
